much progress. database issue prevents successful install